replace legacy Vector with ArrayList